--- a/Library_Management_System/.classpath
+++ b/Library_Management_System/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk-14.0.2/External Libraries/junit-4.12.jar">
+	<classpathentry kind="lib" path="/Users/rickylopez/Files/Java Libraries/junit-4.12.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk-14.0.2/External Libraries/mysql-connector-java-8.0.27.jar">
+	<classpathentry kind="lib" path="/Users/rickylopez/Files/Java Libraries/mysql-connector-java-8.0.27.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
